@@ -8,8 +8,9 @@ lbdb (0.41) unstable; urgency=medium
     - lbdbq: Remove unreached break after exit.
   * Upgrade to Standards-Version 3.9.7 (no changes).
   * Update debian/copyright.
+  * fetchaddr: avoid segfault on empty lines (Closes: #715901).
 
- -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Mar 2016 13:53:02 +0100
+ -- Roland Rosenfeld <roland@debian.org>  Fri, 04 Mar 2016 18:48:46 +0100
 
 lbdb (0.40) unstable; urgency=medium
 
